<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FitnessHomePageActivity"
    android:background="?attr/bgColor">



    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="194dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#eb9b34"
        android:text="Back To Modules"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterExercise" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="388dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/fitness_tracker"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonViewExercises"
        android:layout_width="194dp"
        android:layout_height="117dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#eb9b34"
        android:text="@string/view_exercises"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonRegisterExercise"
        android:layout_width="194dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#eb9b34"
        android:text="@string/register_new_exercise"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewExercises" />

</androidx.constraintlayout.widget.ConstraintLayout>