<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eb9b34"
    tools:context=".WorkoutDetailActivity">

    <TextView
        android:id="@+id/txtViewWeightText"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:hint="Weight"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewWeightDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewRepsText"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:hint="Reps"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewRepsDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewSetsDetail"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:hint="2"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSetsText" />

    <TextView
        android:id="@+id/txtViewSetsText"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:hint="Sets"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSetsDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewEquipmentDetail"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/barbell"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textFontWeight="20"
        app:layout_constraintBottom_toTopOf="@+id/txtViewWeightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewWeightDetail"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="4dp"
        android:hint="200"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewRepsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewRepsDetail"
        android:layout_width="413dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:hint="10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSetsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtViewExerciseDetail"
        android:layout_width="408dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/squats"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewEquipmentDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBackDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGraphView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="24dp"
        android:text="@string/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>